--- a/items/additems.html
+++ b/items/additems.html
@@ -1,5 +1,11 @@
-1.idle
-2.dosa.
-3.sambar idle.
-4.biryani.
-5.chicken fry.
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
+<body>
+    <marquee>it is a tag which is used to scroll</marquee>
+</body>
+</html>
