resturants add delete view updated part is completed

--- a/resturants/updateresturant.html
+++ b/resturants/updateresturant.html
@@ -1,2 +1,11 @@
-this is my new resturant page 
-updated
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
+<body>
+   <marquee>this is updated resturants</marquee> 
+</body>
+</html>
