--- a/resturants/addresturant.html
+++ b/resturants/addresturant.html
@@ -1,1 +1,11 @@
-this is my resturants page
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
+<body>
+    <marquee>adding resturants</marquee>
+</body>
+</html>
