--- a/resturants/users/register.html
+++ b/resturants/users/register.html
@@ -1,1 +1,11 @@
-this is my register page
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
+<body>
+    <marquee>this is register page</marquee>
+</body>
+</html>
