--- a/resturants/users/orders/addorders.html
+++ b/resturants/users/orders/addorders.html
@@ -6,6 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-    <marquee>my orders</marquee>
+    <marquee>my order is placed</marquee>
 </body>
 </html>
